--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="news">News</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="qr_amp_barcode_scanner"><![CDATA[QR & Barcode Scanner]]></string>
+    <string name="gallery">Gallery</string>
+    <string name="camera">Camera</string>
+    <string name="todo">TODO</string>
 </resources>
